# hacs-ai

./: .dockerignore  .env.deployment  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HACS_TOOLS_IMPLEMENTATION_REVIEW.md  HF_INGESTION_EVALUATION_REPORT.md  LICENSE  MCP_DEPENDENCY_ELIMINATION_REPORT.md  README.md  README_OLD.md  SECURITY.md  WORKFLOW_VISUALIZATION_ENHANCEMENT_REPORT.md  agent_logs.txt  conftest.py  db_monitor_monitor_1755104624_1755104628.json  debug_interactive_example.py  diagnostic_facade_issues.py  docker-compose.yml  env.local.example  evaluate_hf_ingestion.py  evaluate_hf_simplified.py  hf_ingestion_evaluation_eval_1755104640_2784153f.json  hf_simplified_evaluation_simplified_eval_1755104736.json  mapping_spec.json  mcp_langgraph_docs..md  mkdocs.yml  monitor_database_resources.py  publish.py  pyproject.toml  pytest.ini  run_tests.sh  setup_developer_agent.sh  setup_local.sh  setup_remote.sh  smoke_test_hacs.py  update_versions.py  (+2 more)
.github/workflows/: ci.yml  pages.yml  publish.yml  test.yml
docs/: Dockerfile  README.md  api-reference.md  basic-usage.md  branch-management.md  cli.md  database-migration.md  deployment.md  enhanced-core-models.md  gallery.md  hacs-tools.md  healthcare-tools.md  implementation-plan-updated.md  index.md  integrations.md  mcp_langgraph.md  pgvector-integration.md  phase3-testing-summary.md  quick-start.md  resources.md  testing.md  tool-integration-best-practices.md
docs/architecture/: ADR-001-SOLID-principles-compliance.md  ADR-002-actor-based-security.md  ADR-003-protocol-first-design.md
docs/how-to/: authenticate_actor.md  clinical_reasoning.md  connect_postgres.md  create_langgraph_agent.md  creating_private_registry.md  extend_resources.md  extract_annotations.md  facade_extraction.md  grounded_extraction.md  manage_context_tools.md  persist_resources.md  structured_outputs.md  supabase_connection_guide.md  use_register_tools.md  validate_hacs_models.md  validation_results.md  visualize_resources.md
docs/tools/: capability_map.json  tool_inventory.json
docs/tutorials/: complete_context_engineering.md  medication_extraction.md
docs/visuals/: observation.html  patient.html
examples/: README.md  README_voa_extraction.md  comprehensive_hacs_examples.py  huggingface_voa_extraction.py  test_voa_parsing.py  validated_hacs_examples.py
examples/hacs_deep_agent/: .env.example  README.md  __init__.py  admin_agent.py  admin_prompts.py  admin_state.py  admin_subagents.py  agent.py  config.py  configuration.py  example_usage.py  langgraph.json  prompts.py  pyproject.toml  requirements.txt  run_result.json  state.py  sub_agent.py  subagents.py  tools.py
examples/hacs_deep_agent/.langgraph_api/: .langgraph_ops.pckl
examples/hacs_developer_agent/: .gitignore  ASYNCIO_FIX_COMPLETE.md  CLEANUP_COMPLETE.md  ENHANCED_AGENT_SUMMARY.md  FINAL_STATUS.md  LANGCHAIN_MCP_INTEGRATION.md  README.md  __init__.py  agent.py  agent_hybrid_mcp.py  agent_mcp_integrated.py  agent_mcp_robust.py  clinical_consultation_template.md  configuration.py  deep_agent.py  deep_tools.py  env.example  graph.py  hacs_agent.py  hacs_model.py  hacs_models_overview.md  hacs_prompts.py  hacs_state.py  hacs_sub_agent.py  hacs_subagents_config.py  hacs_tools_integration.py  langgraph.json  langgraph_hybrid.json  langgraph_mcp.json  langgraph_robust.json  mcp_graph.py  prompts.py  pyproject.toml  state.py  sub_agents.py  subagents.py  test_hybrid_tools.py  test_mcp_core.py  test_mcp_fixed.py  test_mcp_integration.py  (+5 more)
examples/hacs_developer_agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
examples/hacs_developer_agent/scripts/: init-db.sql
examples/hf_ingestion/: README.md  hf_ingestion_direct_hacs_results_1755183842.json  hf_ingestion_direct_hacs_results_1755184312.json  hf_ingestion_direct_hacs_results_1755184682.json  hf_ingestion_direct_hacs_results_1755185214.json  hf_ingestion_direct_hacs_results_1755185625.json  hf_ingestion_direct_hacs_results_1755186175.json  hf_ingestion_direct_hacs_results_1755186375.json  ingest_voa_alpaca.py  ingest_voa_alpaca_direct_hacs.py  pyproject.toml  test_bundle_creation.py  verify_bundle_workflow.py  workflow_visualizer.py  workflows.py  workflows_direct_hacs.py
examples/hf_ingestion/workflow_reports/: workflow_metrics_1755183842.json  workflow_metrics_1755184312.json  workflow_metrics_1755184682.json  workflow_metrics_1755185214.json  (+10 more)
examples/langchain_integration/: COMPLETION_SUMMARY.md  HACS_LANGCHAIN_INTEGRATION_REPORT.md  README.md
logs/: capture_summary.json  docker_raw.json  pip_install_raw.json  python_execution_raw.json
scripts/: generate_tool_inventory.py  init-db.sql  setup_developer_agent.sh  validate_supabase_connection.py  verify-setup.sh
site/: 404.html  index.html  objects.inv
site/api-reference/: index.html
site/gallery/: index.html
site/hacs-tools/: index.html
site/quick-start/: index.html
site/search/: search_index.json
site/testing/: index.html
site/visuals/: annotations.html
tests/: conftest.py  test_anthropic_optional.py  test_ci_essential.py  test_db_smoke.py  test_debug_edge_cases.py  test_debug_warnings_performance.py  test_facades.py  test_hacs_core_unit.py  test_hacs_debug_comprehensive.py  test_hacs_persistence_unit.py  test_hacs_registry_unit.py  test_hacs_tools_comprehensive.py  test_hacs_tools_resource_management.py  test_hacs_tools_schema.py  test_hacs_tools_unit.py  test_hacs_utils_unit.py  test_integration_boundaries.py  test_integration_end_to_end.py  test_integrations_discovery.py  test_langchain_structured_extraction.py  test_langchain_tool_registry.py  test_langgraph_optional.py  test_llm_smoke.py  test_mcp_optional.py  test_normalization_and_llmcontext.py  test_openai_native_fallback.py  test_phase2_integration.py  test_registry_extractables.py  test_vector_stores_optional.py
(+16 files in other folders)
